# synfone2

./: Cargo.toml  make_n_gen.sh
gens/: basic_saw.gen  itlc_head.gen  itlc_tail.gen  test.gen  test_basic.gen  test_lut.gen  test_voice.gen
src/: client.rs  lib.rs  main.rs  monitor.rs  proto.rs  types.rs
src/graphics/: mod.rs
src/graphics/draw/: mod.rs
src/lang/: mod.rs  parser.rs  tokenizer.rs
src/seq/: mod.rs  sequencer.rs
src/seq/file/: iv.rs  mod.rs
src/synth/: adsr.rs  logic.rs  lut.rs  math.rs  mod.rs  noise.rs  param.rs  rel.rs  saw.rs  sine.rs  square.rs  triangle.rs  util.rs
