[package]
name = "synfone"
version = "0.1.0"
authors = ["Graham Northup <grissess@nexusg.org>"]

[[bin]]
name = "synfone"
doc = false

[features]
default = ['graphics']

# The following feature will always refer ultimately to whatever backend
# graphics library is chosen--which is subject to change.
graphics = ['glium', 'piston2d-graphics', 'piston2d-glium_graphics', 'palette']

[dependencies]
byteorder = "1.1.0"
rand = "0.3"
unicode-xid = "0.1.0"
portaudio = "0.7.0"

[dependencies.glium]
#version = "0.17.1"
git = "https://github.com/cmr/glium.git"
optional = true
features = ["glutin"]

[dependencies.'piston2d-graphics']
version = "0.22.0"
optional = true

[dependencies.'piston2d-glium_graphics']
version = "0.43.0"
optional = true

[dependencies.palette]
version = "0.2"
optional = true
