[package]
name = "synfone"
edition = "2018"
version = "0.1.0"
authors = ["Graham Northup <grissess@nexusg.org>"]

[[bin]]
name = "synfone"
doc = false


[dependencies]
byteorder = "1.1.0"
rand = "0.3"
cpal = { version = "0.13", features = [ "jack" ] }
unicode-xid = "0.1.0"
xml-rs = "0.8.0"
failure = "0.1"
